maps/testing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-proxy-testing
  labels:
    app.kubernetes.io/name: auth-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: auth-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: auth-proxy
    spec:
      nodeSelector:
        kind: internet-general
      containers:
      - name: auth-proxy
        image: 582601430203.dkr.ecr.us-east-2.amazonaws.com/authorization:r9789917_request-and-headers
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
        - name: metrics
          containerPort: 8033
        readinessProbe:
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /ping
            port: http
          initialDelaySeconds: 20
          periodSeconds: 5
        resources:
          requests:
            memory: "450Mi"
            cpu: "500m"
          limits:
            memory: "1000Mi"
            cpu: "1000m"
