maps/testing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-proxy-testing
  labels:
    app.kubernetes.io/name: auth-proxy
spec:
  selector:
    app.kubernetes.io/name: auth-proxy
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  - name: metrics
    protocol: TCP
    port: 8033
    targetPort: metrics
