maps/testing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-proxy-testing
  labels:
    app.kubernetes.io/name: auth-proxy
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/ip-address-type: dualstack
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /ping
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:582601430203:certificate/4b69a872-33ef-4c14-9abe-30afcf30d26e
    alb.ingress.kubernetes.io/load-balancer-name: k8s-auth-proxy-testing
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth-proxy-testing
            port:
              number: 80
